upgrade to DDD